--- a/src/app/layout/company/branch-list/branch-list.component.html
+++ b/src/app/layout/company/branch-list/branch-list.component.html
@@ -6,7 +6,7 @@
           <i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary">
           <i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="showBranchAdd()">
+        <button type="button" class="btn btn-primary" (click)="showBranchAdd()">
           <i class="fa fa-plus"></i> New Branch</button>
       </div>
       <div class="clearfix"></div>
