--- a/src/app/layout/company/company-add/company-add.component.html
+++ b/src/app/layout/company/company-add/company-add.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('company')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('company')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Phone</label>
-                                    <input type="text" class="form-control" name="company_contact" placeholder="Phone" formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
+                                    <input type="text" appOnlyNumber class="form-control" name="company_contact" placeholder="Phone" formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
                                     <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('minlength') && !form.controls['company_contact'].hasError('required')">
                                         Please enter at least 10 digit
                                     </div>
@@ -101,14 +101,14 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Pin</label>
-                                    <input type="text" class="form-control" placeholder="Pin" name="company_pin" formControlName="company_pin" [ngClass]="displayFieldCss('company_pin')">
+                                    <input type="text" appOnlyNumber class="form-control" placeholder="Pin" name="company_pin" formControlName="company_pin" [ngClass]="displayFieldCss('company_pin')">
                                     <div class="invalid-feedback" *ngIf="form.controls['company_pin'].hasError('required')">
                                         Please enter pin
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>GSTIN</label>
-                                    <input type="number" class="form-control" placeholder="GSTIN" name="company_gst" formControlName="company_gst" [ngClass]="displayFieldCss('company_gst')">
+                                    <input type="text" class="form-control" placeholder="GSTIN" name="company_gst" formControlName="company_gst" [ngClass]="displayFieldCss('company_gst')">
                                     <div class="invalid-feedback" *ngIf="form.controls['company_gst'].hasError('required')">
                                         Please enter GSTN
                                     </div>
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addNewCompany()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addNewCompany()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
