--- a/src/app/layout/department/department-edit/department-edit.component.html
+++ b/src/app/layout/department/department-edit/department-edit.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
           <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
           <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav('department')"><i class="fa fa-arrow-left"></i> Back</button>
+          <button type="button" class="btn btn-primary" (click)="btnClickNav('department')"><i class="fa fa-arrow-left"></i> Back</button>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -29,7 +29,7 @@
                                 <input class="form-control" [(ngModel)]="department.department_name" name="department_name" placeholder="Department Name">
                             </div>
                             <div class="form-group col-md-12" style="text-align: right">
-                                <button type="submit" class="btn btn-success">Submit</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
                                 <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </div>
