--- a/src/app/layout/banks/banks.component.html
+++ b/src/app/layout/banks/banks.component.html
@@ -1,10 +1,15 @@
 <div>
-  <app-page-header [heading]="'Bank List'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('banks/add')"><i class="fa fa-plus"></i> New Bank</button>
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">Bank List</h4>
+    </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-refresh"></i> Reload</button>
+      <button type="button" class="btn btn-primary" (click)="btnClickNav('banks/add')">
+        <i class="fa fa-plus"></i> New Bank</button>
     </div>
     <div class="clearfix"></div>
   </div>
@@ -13,7 +18,25 @@
   <div class="row">
     <div class="col-md-12">
     <div class="card">
-      <div class="card-header">Banks</div>
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-9">
+            <h5>Banks</h5>
+          </div>
+          <div class="col-md-3">
+            <form role="form" (ngSubmit)="dataSearch()">
+              <div class="input-group">
+                <input type="text" class="form-control" name="search" placeholder="Search" [(ngModel)]="search_key">
+                <div class="input-group-append">
+                  <button class="btn btn-secondary" type="submit">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
       <table class="card-body table table-hover table-sm table-bordered">
           <thead>
           <tr>
@@ -27,33 +50,33 @@
           </tr>
           </thead>
           <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Shyam Futuretech</td>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-            <td><i class="fa fa-thumbs-up"></i> Active</td>
+          <tr *ngFor="let bank of bankList ; let i = index">
+            <th scope="row">{{i +1}}</th>
+            <td>{{bank.company.company_name}}</td>
+            <td>{{bank.bank_branch}}</td>
+            <td>{{bank.bank_name}}</td>
+            <td>{{bank.bank_ifsc}}</td>
+            <td>
+              <a href="javascript:void(0);" title="Active" name="Active" (click)="inactiveBank(bank.id)" *ngIf="bank.status==true">
+                <i class="fa fa-thumbs-up"></i> Active</a>
+              <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activeBank(bank.id)" *ngIf="bank.status==false">
+                <i class="fa fa-thumbs-down"></i> Inactive</a>
+            </td>
             <td>
               <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/banks/edit', 1]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-              <a href="javascript:void(0);" title="Map" name="Map"><i class="fa fa-trash-o"></i></a>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">1</th>
-            <td>Shyam Futuretech</td>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-            <td><i class="fa fa-thumbs-up"></i> Active</td>
-            <td>
-              <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/banks/edit', 2]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-              <a href="javascript:void(0);" title="Map" name="Map"><i class="fa fa-trash-o"></i></a>
+              <a href="javascript:void(0);" title="Map" name="Map" (click)="deleteBank(bank.id)"><i class="fa fa-trash-o"></i></a>
             </td>
           </tr>
           </tbody>
       </table>
     </div>
   </div>
+  </div>
+  <div class="row" *ngIf="totalBankList > 10">
+    <div class="col-md-12">
+      <div class="card-body pull-right">
+        <ngb-pagination [collectionSize]="totalBankList" [(page)]="defaultPagination" (pageChange)="pagination()" size="sm"></ngb-pagination>
+      </div>
+    </div>
   </div>
 </div>
