--- a/src/app/layout/company/branch-edit/branch-edit.component.html
+++ b/src/app/layout/company/branch-edit/branch-edit.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
           <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
           <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav()"><i class="fa fa-arrow-left"></i> Back</button>
+          <button type="button" class="btn btn-primary" (click)="btnClickNav()"><i class="fa fa-arrow-left"></i> Back</button>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -32,7 +32,7 @@
                             </div>
                             <div class="form-group col-md-4">
                               <label>Phone</label>
-                              <input type="number" class="form-control" [(ngModel)]="companyBranch.branch_contact_no" name="branch_contact_no" placeholder="Phone" formControlName="branch_contact_no" [ngClass]="displayFieldCss('branch_contact_no')">
+                              <input type="text" appOnlyNumber class="form-control" [(ngModel)]="companyBranch.branch_contact_no" name="branch_contact_no" placeholder="Phone" formControlName="branch_contact_no" [ngClass]="displayFieldCss('branch_contact_no')">
                               <div class="invalid-feedback" *ngIf="isFieldValid('branch_contact_no')">
                                     Please enter phone
                                 </div>
@@ -64,14 +64,14 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Pin</label>
-                                <input type="number" class="form-control" placeholder="Pin" [(ngModel)]="companyBranch.branch_pincode" name="branch_pincode" formControlName="branch_pincode" [ngClass]="displayFieldCss('branch_pincode')">
+                                <input type="text" appOnlyNumber class="form-control" placeholder="Pin" [(ngModel)]="companyBranch.branch_pincode" name="branch_pincode" formControlName="branch_pincode" [ngClass]="displayFieldCss('branch_pincode')">
                                 <div class="invalid-feedback" *ngIf="isFieldValid('branch_pincode')">
                                         Please enter pin
                                     </div>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>GSTIN</label>
-                                <input type="number" class="form-control" placeholder="GSTIN" [(ngModel)]="companyBranch.branch_gstin" name="branch_gstin" formControlName="branch_gstin" [ngClass]="displayFieldCss('branch_gstin')">
+                                <input type="text" class="form-control" placeholder="GSTIN" [(ngModel)]="companyBranch.branch_gstin" name="branch_gstin" formControlName="branch_gstin" [ngClass]="displayFieldCss('branch_gstin')">
                                 <div class="invalid-feedback" *ngIf="isFieldValid('branch_gstin')">
                                         Please enter GSTIN
                                     </div>
@@ -94,7 +94,7 @@
                             </div>
 
                             <div class="form-group col-md-12" style="text-align: right">
-                                <button type="submit" class="btn btn-success" (click)="updateCompanyBranch()">Submit</button>
+                                <button type="submit" class="btn btn-primary" (click)="updateCompanyBranch()">Submit</button>
                                 <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                             </div>
                         </div>
