--- a/src/app/layout/company/company-tree/company-tree.component.html
+++ b/src/app/layout/company/company-tree/company-tree.component.html
@@ -7,7 +7,7 @@
         <i class="fa fa-question" aria-hidden="true"></i> Help</button>
       <button type="button" class="btn btn-secondary">
         <i class="fa fa-refresh"></i> Reload</button>
-      <button type="button" class="btn btn-success" (click)="btnClickNav('company/add')">
+      <button type="button" class="btn btn-primary" (click)="btnClickNav('company/add')">
         <i class="fa fa-plus"></i> New Company</button>
     </div>
     <div class="clearfix"></div>
