--- a/src/app/layout/company/storage-bin-add/storage-bin-add.component.html
+++ b/src/app/layout/company/storage-bin-add/storage-bin-add.component.html
@@ -5,7 +5,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav()">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav()">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="form-group col-md-2">
                                     <label>Bin Number</label>
-                                    <input type="number" class="form-control" [(ngModel)]="companyStorageBin.bin_no" name="bin_no" placeholder="Bin Number" formControlName="bin_no"
+                                    <input type="text"  class="form-control" [(ngModel)]="companyStorageBin.bin_no" name="bin_no" placeholder="Bin Number" formControlName="bin_no"
                                         [ngClass]="displayFieldCss('bin_no')">
                                     <div class="invalid-feedback" *ngIf="isFieldValid('bin_no')">
                                         Please enter bin number
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="form-group col-md-2">
                                     <label>Bin Volume</label>
-                                    <input type="number" class="form-control" [(ngModel)]="companyStorageBin.bin_volume" name="bin_volume" placeholder="Bin Volume" formControlName="bin_volume"
+                                    <input type="text" appOnlyNumber class="form-control" [(ngModel)]="companyStorageBin.bin_volume" name="bin_volume" placeholder="Bin Volume" formControlName="bin_volume"
                                         [ngClass]="displayFieldCss('bin_volume')">
                                     <div class="invalid-feedback" *ngIf="isFieldValid('bin_volume')">
                                         Please enter bin volume
@@ -69,7 +69,7 @@
                                 </div>
 
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addNewCompanyStorageBin()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addNewCompanyStorageBin()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
