--- a/src/app/layout/company/storage-bin-list/storage-bin-list.component.html
+++ b/src/app/layout/company/storage-bin-list/storage-bin-list.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
             <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="showStorageBinAdd()"><i class="fa fa-plus"></i> New Branch</button>
+            <button type="button" class="btn btn-primary" (click)="showStorageBinAdd()"><i class="fa fa-plus"></i> New Branch</button>
         </div>
         <div class="clearfix"></div>
       </div>
