--- a/src/app/layout/department/department.component.html
+++ b/src/app/layout/department/department.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
         <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('department/add')"><i class="fa fa-plus"></i> New Department</button>
+        <button type="button" class="btn btn-primary" (click)="btnClickNav('department/add')"><i class="fa fa-plus"></i> New Department</button>
     </div>
     <div class="clearfix"></div>
   </div>
