--- a/src/app/layout/gst-rates/gst-rates-add/gst-rates-add.component.html
+++ b/src/app/layout/gst-rates/gst-rates-add/gst-rates-add.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('gst-rates')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('gst-rates')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -32,16 +32,8 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-3">
-                                    <label>IGST(%)</label>
-                                    <input type="number" class="form-control"  name="igst" placeholder="IGST" formControlName="igst"
-                                        [ngClass]="displayFieldCss('igst')" readonly>
-                                    <div class="invalid-feedback" *ngIf="form.controls['igst'].hasError('required')">
-                                        Please enter IGST
-                                    </div>
-                                </div>
-                                <div class="form-group col-md-3">
                                     <label>CGST(%)</label>
-                                    <input type="number" class="form-control" name="cgst" placeholder="CGST" formControlName="cgst"
+                                    <input type="text" appOnlyNumber class="form-control" name="cgst" placeholder="CGST" formControlName="cgst"
                                         [ngClass]="displayFieldCss('cgst')" (keyup)="GetIgst(form.value.cgst,form.value.sgst)">
                                     <div class="invalid-feedback" *ngIf="form.controls['cgst'].hasError('required')">
                                         Please enter CGST
@@ -49,14 +41,22 @@
                                 </div>
                                 <div class="form-group col-md-3">
                                     <label>SGST(%)</label>
-                                    <input type="number" class="form-control"  name="sgst" placeholder="SGST" formControlName="sgst"
+                                    <input type="text" appOnlyNumber class="form-control"  name="sgst" placeholder="SGST" formControlName="sgst"
                                         [ngClass]="displayFieldCss('sgst')" (keyup)="GetIgst(form.value.cgst,form.value.sgst)">
                                     <div class="invalid-feedback" *ngIf="form.controls['sgst'].hasError('required')">
                                         Please enter SGST
                                     </div>
                                 </div>
+                                <div class="form-group col-md-3">
+                                    <label>IGST(%)</label>
+                                    <input type="text" appOnlyNumber class="form-control"  name="igst" placeholder="IGST" formControlName="igst"
+                                        [ngClass]="displayFieldCss('igst')" readonly>
+                                    <div class="invalid-feedback" *ngIf="form.controls['igst'].hasError('required')">
+                                        Please enter IGST
+                                    </div>
+                                </div>
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addNewGstRate()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addNewGstRate()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
