--- a/src/app/layout/purchase-invoice/purchase-invoice-add/purchase-invoice-add.component.html
+++ b/src/app/layout/purchase-invoice/purchase-invoice-add/purchase-invoice-add.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-invoice')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('purchase-invoice')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addPurchaseInvoice()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addPurchaseInvoice()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
