--- a/src/app/layout/purchase-organization/purchase-organization.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization.component.html
@@ -9,7 +9,7 @@
         <i class="fa fa-question" aria-hidden="true"></i> Help</button>
       <button type="button" class="btn btn-secondary">
         <i class="fa fa-refresh"></i> Reload</button>
-      <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization/add')">
+      <button type="button" class="btn btn-primary" (click)="btnClickNav('purchase-organization/add')">
         <i class="fa fa-plus"></i> New Purchase Organization</button>
     </div>
     <div class="clearfix"></div>
