--- a/src/app/layout/purchase-requisition/purchase-requisition-deatils/purchase-requisition-deatils.component.html
+++ b/src/app/layout/purchase-requisition/purchase-requisition-deatils/purchase-requisition-deatils.component.html
@@ -9,7 +9,7 @@
               <i class="fa fa-question" aria-hidden="true"></i> Help</button>
           <button type="button" class="btn btn-secondary">
               <i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-requisition')">
+          <button type="button" class="btn btn-primary" (click)="btnClickNav('purchase-requisition')">
               <i class="fa fa-arrow-left"></i> Back</button>
       </div>
       <div class="clearfix"></div>
