--- a/src/app/layout/sale-group/sale-group.component.html
+++ b/src/app/layout/sale-group/sale-group.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('sale-group/add')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('sale-group/add')">
                 <i class="fa fa-plus"></i> New Sale Group</button>
         </div>
         <div class="clearfix"></div>
