--- a/src/app/layout/states/states-add/states-add.component.html
+++ b/src/app/layout/states/states-add/states-add.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('states')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('states')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Tin Number</label>
-                                    <input type="number" class="form-control" name="tin_number" placeholder="Tin Number" formControlName="tin_number" [ngClass]="displayFieldCss('tin_number')">
+                                    <input type="text" appOnlyNumber class="form-control" name="tin_number" placeholder="Tin Number" formControlName="tin_number" [ngClass]="displayFieldCss('tin_number')">
                                     <div class="invalid-feedback" *ngIf="isFieldValid('tin_number')">
                                         Please enter tin number
                                     </div>
@@ -45,7 +45,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addState()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addState()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
