--- a/src/app/layout/states/states-edit/states-edit.component.html
+++ b/src/app/layout/states/states-edit/states-edit.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('states')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('states')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Tin Number</label>
-                                    <input class="form-control" type="number" [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number" formControlName="tin_number"
+                                    <input class="form-control" type="text" appOnlyNumber [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number" formControlName="tin_number"
                                         [ngClass]="displayFieldCss('tin_number')">
                                     <div class="invalid-feedback" *ngIf="isFieldValid('tin_number')">
                                         Please enter tin number
@@ -48,7 +48,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="updateState()">Submit</button>
+                                    <button type="submit" class="btn btn-primary" (click)="updateState()">Submit</button>
                                     <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
