--- a/src/app/layout/terms-condition/terms-condition-add/terms-condition-add.component.html
+++ b/src/app/layout/terms-condition/terms-condition-add/terms-condition-add.component.html
@@ -9,7 +9,7 @@
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-refresh"></i> Reload</button>
-            <button type="button" class="btn btn-success" (click)="btnClickNav('terms-condition')">
+            <button type="button" class="btn btn-primary" (click)="btnClickNav('terms-condition')">
                 <i class="fa fa-arrow-left"></i> Back</button>
         </div>
         <div class="clearfix"></div>
@@ -55,8 +55,8 @@
                                 </div>
 
                                 <div class="form-group col-md-12" style="text-align: right">
-                                    <button type="submit" class="btn btn-success" (click)="addNewTerms()">Submit</button>
-                                    <button type="reset" class="btn btn-secondary" (click)="reSet">Reset</button>
+                                    <button type="submit" class="btn btn-primary" (click)="addNewTerms()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                                 </div>
                             </div>
                         </div>
