--- a/src/app/layout/transport/transport-edit/transport-edit.component.html
+++ b/src/app/layout/transport/transport-edit/transport-edit.component.html
@@ -9,7 +9,7 @@
         <i class="fa fa-question" aria-hidden="true"></i> Help</button>
       <button type="button" class="btn btn-secondary">
         <i class="fa fa-refresh"></i> Reload</button>
-      <button type="button" class="btn btn-success" (click)="btnClickNav('transport')">
+      <button type="button" class="btn btn-primary" (click)="btnClickNav('transport')">
         <i class="fa fa-arrow-left"></i> Back</button>
     </div>
     <div class="clearfix"></div>
@@ -115,20 +115,20 @@
                 </div>
                 <div class="form-group col-md-2">
                   <label>Amount Credit</label>
-                  <input class="form-control" [(ngModel)]="transport.amount_credit" name="amount_credit" placeholder="Amount Credit" formControlName="amount_credit" [ngClass]="displayFieldCss('amount_credit')">
+                  <input appOnlyNumber class="form-control" [(ngModel)]="transport.amount_credit" name="amount_credit" placeholder="Amount Credit" formControlName="amount_credit" [ngClass]="displayFieldCss('amount_credit')">
                   <div class="invalid-feedback" *ngIf="form.controls['amount_credit'].hasError('required')">
                       Please enter amount credit
                   </div>
                 </div>
                 <div class="form-group col-md-2">
                   <label>Amount Debit</label>
-                  <input class="form-control" [(ngModel)]="transport.amount_debit" name="amount_debit" placeholder="Amount Debit" formControlName="amount_debit" [ngClass]="displayFieldCss('amount_debit')">
+                  <input appOnlyNumber class="form-control" [(ngModel)]="transport.amount_debit" name="amount_debit" placeholder="Amount Debit" formControlName="amount_debit" [ngClass]="displayFieldCss('amount_debit')">
                   <div class="invalid-feedback" *ngIf="form.controls['amount_debit'].hasError('required')">
                       Please enter amount debit
                   </div>
                 </div>
                 <div class="form-group col-md-12" style="text-align: right">
-                  <button type="submit" class="btn btn-success" (click)="updateTransport()">Submit</button>
+                  <button type="submit" class="btn btn-primary" (click)="updateTransport()">Submit</button>
                   <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                 </div>
               </div>
