purchase-organization mapping QA fixed

--- a/src/app/layout/purchase-organization/purchase-organization-mapping/purchase-organization-mapping.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization-mapping/purchase-organization-mapping.component.html
@@ -23,8 +23,7 @@
                           <ul class="companyList">
                             <li *ngFor="let company of companyBranchTree">{{company.company_name}}
                                 <ul *ngIf="company.company_branch.length>0">
-                                    <li *ngFor="let companyBranch of company.company_branch"><input type="checkbox" [name]="company.id" [value]="company.id"
-                                      [(ngModel)]="companyBranch.checked"/>{{companyBranch.branch_name}}</li>
+                                    <li *ngFor="let companyBranch of company.company_branch"><input type="checkbox" [name]="company.id" [(ngModel)]="companyBranch.checked"/>{{companyBranch.branch_name}}</li>
                                 </ul>
                             </li>
                           </ul>
