--- a/src/app/layout/material/material.component.html
+++ b/src/app/layout/material/material.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-6 pull-right" style="text-align: right">
         <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('material/add')"><i class="fa fa-plus"></i> New Material</button>
+        <button type="button" class="btn btn-primary" (click)="btnClickNav('material/add')"><i class="fa fa-plus"></i> New Material</button>
     </div>
     <div class="clearfix"></div>
   </div>
