--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -29,6 +29,17 @@
 .main-body .login-page {
     background: url(../assets/images/login-bg.jpg) no-repeat 0 0 !important;
     background-size: 100% !important;
+    background-size: auto;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-animation: zoomin 10s ease-in infinite;
+    animation: zoomin 10s ease-in infinite;
+    transition: all .5s ease-in-out;
+    overflow: hidden;
 }
 
 .main-body .login-page .login-form {
@@ -104,4 +115,46 @@
 
 .cata-gory {
     margin-top: 28px;
+}
+
+.card {
+    -webkit-box-shadow: 0px 1px 19px -6px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 1px 19px -6px rgba(0, 0, 0, 0.63);
+    padding: 0 7px;
+}
+
+.card-body input {
+    border-radius: 0;
+    -webkit-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+}
+
+.card-body select {
+    border-radius: 0;
+    -webkit-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+}
+
+.card-body textarea {
+    border-radius: 0;
+    -webkit-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 0px 16px -5px rgba(0, 0, 0, 0.75);
+}
+
+label {
+    color: #868e96;
+    font-weight: bold;
+}
+
+.table thead {
+    background: #ececec;
+}
+
+.card-header h5 {
+    font-weight: bold;
+    font-size: 18px;
+    color: #1976d2;
 }
